fixed chat alignment and added rainbow buttons

--- a/public/style.css
+++ b/public/style.css
@@ -414,12 +414,14 @@ form div {
 }
 
 .play-container {
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  /* margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
 }
 
 .play-button {
@@ -448,8 +450,9 @@ form div {
 /* CHAT */
 
 .chat-container {
-  margin-top: 200px;
-  max-width: 410px;
+  /* margin-top: 200px; */
+  width: 50%;
+  align-self: center;
 }
 
 .chat-window {
@@ -459,6 +462,8 @@ form div {
   flex-direction: column;
   border: 4px solid #453a94;
   border-radius: 10px;
+  max-width: 50%;
+  min-width: 400px;
 }
 
 .chat-header {
@@ -503,7 +508,7 @@ form div {
 }
 
 .chat-me {
-  display: inline-block;
+  display: block;
   position: relative;
   padding: 0.2rem 1.25rem;
   border-radius: 21px;
@@ -512,29 +517,25 @@ form div {
   background-color: #453a94;
   color: white;
   clear: both;
-  /* transform-origin: bottom right; */
-  /* animation: appear 0.3s cubic-bezier(0.36, -0.04, 0.15, 1.64) forwards; */
-  max-width: 70%;
+  max-width: fit-content;
   justify-content: flex-start;
+  text-align: start;
 }
 
 .chat-them {
-  display: inline-block;
+  display: block;
   position: relative;
   padding: 0.2rem 1.25rem;
   border-radius: 21px;
+  margin-bottom: 10px;
   border-bottom-right-radius: 0;
   background-color: white;
-  margin-bottom: 10px;
-  /* margin-left: 9rem; */
-  margin-right: auto;
-  float: right;
-  clear: both;
   color: #453a94;
-  /* transform-origin: bottom right; */
-  /* animation: appear 0.3s cubic-bezier(0.36, -0.04, 0.15, 1.64) backwards; */
-  /* width: 80%; */
+  clear: both;
+  max-width: fit-content;
+  float: right;
   justify-content: flex-end;
+  text-align: end;
 }
 
 .input-container {
@@ -612,6 +613,13 @@ form div {
 .game-chat {
   display: flex;
   justify-content: center;
+  height: 60vh;
+  width: 100%;
+  flex-direction: column;
+  /* border: 4px solid #453a94; */
+  border-radius: 10px;
+  max-width: 410px;
+  margin: 0 auto;
 }
 
 /* PRACTICE ROOM */
@@ -704,6 +712,7 @@ form div {
   display: flex;
   flex-wrap: column;
   justify-content: space-between;
+  margin: auto;
 }
 
 .song-reveal-column {
@@ -741,4 +750,87 @@ form div {
 .current-col {
   border-width: 3px;
   border-color: #df21c3;
+}
+
+/* HOVER */
+
+.glow-on-hover {
+  width: 130px;
+  height: 50px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  margin: 0 5px;
+  /* line-height: 6.5em; */
+  z-index: 0;
+  border-radius: 20px;
+  text-align: center;
+  vertical-align: center;
+}
+
+.glow-on-hover:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 20px;
+}
+
+.glow-on-hover:active {
+  color: #000;
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #320879;
+  left: 0;
+  top: 0;
+  border-radius: 20px;
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
 }
